# synapse

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/fasteroutcomes_pubsub/: __init__.py
src/fasteroutcomes_pubsub/consumer/: __init__.py  async_message_consumer.py  message_consumer.py
src/fasteroutcomes_pubsub/models/: base.py  error.py  request.py
src/fasteroutcomes_pubsub/protocols/: __init__.py  subscriber.py
src/synapse/: __init__.py
src/synapse/adapters/rabbitmq/: __init__.py  publisher.py  subscriber.py
src/synapse/consumer/: async_message_consumer.py  message_consumer.py
src/synapse/models/: __init__.py  error.py  response.py
src/synapse/protocols/: handler.py  publisher.py  subscriber.py
tests/: test_async_message_consumer.py  test_error_models.py  test_message_consumer.py
tests/integration/: conftest.py  test_rabbitmq_adapter.py
